--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
   "host": "127.0.0.1",
-  "ports": [8080, 8081],
+  "ports": [8080, 8081, 8082],
 
-  "client_max_body_size": 1048576,
+  "client_max_body_size": 10485760,
 
   "error_pages": {
     "404": "error_pages/404.html",
@@ -11,9 +11,16 @@
 
   "routes": [
     {
+      "path": "/uploads",
+      "root": "uploads",
+      "methods": ["GET", "DELETE"],
+      "directory_listing": true,
+      "index": "index.html"
+    },
+    {
       "path": "/",
       "root": "www",
-      "methods": ["GET"],
+      "methods": ["GET", "POST"],
       "directory_listing": false,
       "index": "index.html"
     }
