--- a/config.json
+++ b/config.json
@@ -23,6 +23,12 @@
       "methods": ["GET", "POST"],
       "directory_listing": false,
       "index": "index.html"
+    },
+    {
+      "path": "/cgi-bin",
+      "root": "cgi-bin",
+      "methods": ["GET", "POST"],
+      "cgi": true
     }
   ]
 }
