--- a/config.json
+++ b/config.json
@@ -5,8 +5,11 @@
   "client_max_body_size": 10485760,
 
   "error_pages": {
-    "404": "error_pages/404.html",
-    "500": "error_pages/500.html"
+    "403": "www/error_pages/403.html",
+    "404": "www/error_pages/404.html",
+    "405": "www/error_pages/405.html",
+    "413": "www/error_pages/413.html",
+    "500": "www/error_pages/500.html"
   },
 
   "routes": [
