--- a/config.json
+++ b/config.json
@@ -3,13 +3,13 @@
     {
       "host": "127.0.0.1",
       "ports": [8080, 8081],
-      "client_max_body_size": 10485760,
+      "client_max_body_size": 30485760,
       "error_pages": {
-        "403": "www/error_pages/403.html",
-        "404": "www/error_pages/404.html",
-        "405": "www/error_pages/405.html",
-        "413": "www/error_pages/413.html",
-        "500": "www/error_pages/500.html"
+        "403": "error_pages/403.html",
+        "404": "error_pages/404.html",
+        "405": "error_pages/405.html",
+        "413": "error_pages/413.html",
+        "500": "error_pages/500.html"
       },
       "routes": [
         {
@@ -37,13 +37,13 @@
     {
       "host": "127.0.0.2",
       "ports": [9090],
-      "client_max_body_size": 10485760,
+      "client_max_body_size": 30485760,
       "error_pages": {
-        "403": "www/error_pages/403.html",
-        "404": "www/error_pages/404.html",
-        "405": "www/error_pages/405.html",
-        "413": "www/error_pages/413.html",
-        "500": "www/error_pages/500.html"
+        "403": "error_pages/403.html",
+        "404": "error_pages/404.html",
+        "405": "error_pages/405.html",
+        "413": "error_pages/413.html",
+        "500": "error_pages/500.html"
       },
       "routes": [
         {
