--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "servers": [
     {
-      "host": "127.0.0.1",
+      "hosts": ["127.0.0.1", "localhost"],
       "ports": [8080, 8081],
       "client_max_body_size": 10485760,
       "error_pages": {
@@ -35,7 +35,7 @@
       ]
     },
     {
-      "host": "0.0.0.0",
+      "hosts": ["0.0.0.0"],
       "ports": [9090],
       "client_max_body_size": 10485760,
       "error_pages": {
