--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "servers": [
     {
-      "hosts": ["127.0.0.1", "localhost"],
+      "hosts": ["127.0.0.1", "127.0.0.2"],
       "ports": [8080, 8081],
       "client_max_body_size": 10485760,
       "error_pages": {
